delete scrollbar (fixing night bahs part 6)

--- a/GopherNote/Pages/Home.razor.css
+++ b/GopherNote/Pages/Home.razor.css
@@ -334,10 +334,3 @@
     background-color: var(--accent);
     color: white;
 }
-
-html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
-
